welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:4: error: type mismatch;
 found   : Unit
 required: Boolean
		if ( hour < 23){
                ^