welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
	if (talking){
	if ( hour > 7){
		if ( hour < 23){
			
			return false;
		}
	}else{
		return true;
	}
   }else{
   	return false;
   }
}
